[package]
name = "user_manage"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[dependencies]
ink_primitives = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

# These dependencies
ownable = { git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }
brush = { git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }
psp1155 = { git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }
nft_factory = { version = "0.1.0", path = "../nft_factory", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "user_manage"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "ink_prelude/std",

    # These dependencies
    "ownable/std",
    "brush/std",
    "psp1155/std",
    "nft_factory/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
